Added generate func.

--- a/nanoGPT_train.ipynb
+++ b/nanoGPT_train.ipynb
@@ -47,11 +47,11 @@
         "%ls"
       ],
       "metadata": {
-        "id": "3zRBSLy46lIY",
-        "outputId": "2110d978-39d2-4691-bb5d-b701edc7d783",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3zRBSLy46lIY",
+        "outputId": "2110d978-39d2-4691-bb5d-b701edc7d783"
       },
       "execution_count": 4,
       "outputs": [
@@ -265,11 +265,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "92Md4ebTBeET",
-        "outputId": "bb1da5f9-de7e-4505-bd0b-8db3a0805add",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "92Md4ebTBeET",
+        "outputId": "bb1da5f9-de7e-4505-bd0b-8db3a0805add"
       },
       "execution_count": 11,
       "outputs": [
@@ -297,7 +297,7 @@
         "# fake_pmap = chex.fake_pmap_and_jit(enable_jit_patching=fake_jit, enable_pmap_patching=fake_pmap)\n",
         "# fake_pmap.start()\n",
         "num_epochs = 20\n",
-        "steps_per_epoch = 1 # len(data.train_data) // config.BATCH_SIZE\n",
+        "steps_per_epoch = len(data.train_data) // config.BATCH_SIZE\n",
         "for epoch in range(num_epochs):\n",
         "  print(\"epoch: \", epoch)\n",
         "  data.create_train_dataset()\n",
@@ -306,37 +306,77 @@
         "    random_key, random_subkey = jax.random.split(random_key)\n",
         "\n",
         "    inputs, targets = data.get_batch()\n",
-        "    # pdb.set_trace()\n",
         "\n",
         "    # create device dimension for minibatch\n",
         "    inputs = inputs.reshape((jax.device_count(), -1, inputs.shape[-1]))\n",
         "    targets = targets.reshape((jax.device_count(), -1, targets.shape[-1]))\n",
         "\n",
-        "    # pdb.set_trace()\n",
-        "\n",
         "    states, loss = train_step_pmap(states, inputs, targets, random_subkey)\n",
-        "    print(\"loss\", loss[0], \"epoch\", epoch) if epoch % 1 == 0 else None\n",
+        "    print(\"loss\", loss[0], \"epoch\", epoch) if epoch % 510 == 0 else None\n",
         "\n",
         "# fake_pmap.stop()"
       ],
       "metadata": {
-        "id": "4MVQEgvzBhFD",
-        "outputId": "7cdb554a-d17c-450e-edc0-302139538dd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4MVQEgvzBhFD",
+        "outputId": "17bc4652-ac6d-4c9d-fd31-48fb2d01652a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "epoch:  0\n",
-            "loss 4.233783 epoch 0\n"
+            "loss 3.9624007 epoch 0\n",
+            "loss 3.88149 epoch 0\n",
+            "loss 3.8095543 epoch 0\n",
+            "loss 3.7548494 epoch 0\n",
+            "loss 3.7914453 epoch 0\n",
+            "loss 3.7002654 epoch 0\n",
+            "loss 3.6340194 epoch 0\n",
+            "loss 3.6558213 epoch 0\n",
+            "loss 3.6011715 epoch 0\n",
+            "loss 3.61494 epoch 0\n",
+            "loss 3.6759403 epoch 0\n",
+            "loss 3.595214 epoch 0\n",
+            "loss 3.6045206 epoch 0\n",
+            "loss 3.6529965 epoch 0\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T = config.BLOCK_SIZE\n",
+        "\n",
+        "state = jax.tree_map(lambda x: x[0], states)\n",
+        "\n",
+        "state_apply_jit = jax.jit(state.apply_fn)\n",
+        "\n",
+        "context = jnp.tile(jnp.array([52], dtype=jnp.int32), T)\n",
+        "context = context[None, -T:]\n",
+        "key = jrand.PRNGKey(99)\n",
+        "\n",
+        "for _ in range(100):\n",
+        "  next_token_logits = state_apply_jit({\"params\": state.params}, context[:, -T:])\n",
+        "\n",
+        "  key, split_key = jrand.split(key)\n",
+        "  new_token = jax.random.categorical(key, next_token_logits[:, -1, :], axis=-1, shape=(1, 1))\n",
+        "\n",
+        "  context = jnp.concatenate([context, new_token], axis=1)\n",
+        "\n",
+        "\n",
+        "print(context.tolist()[0])"
+      ],
+      "metadata": {
+        "id": "Gmoj-CS-JDol"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
