--- a/nanoGPT_jax3.ipynb
+++ b/nanoGPT_jax3.ipynb
@@ -17633,14 +17633,22 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "loss 2.694466 step 0\n",
-            "loss 2.5500324 step 100\n"
+            "loss 2.5500324 step 100\n",
+            "loss 2.4421945 step 200\n",
+            "loss 2.356482 step 300\n",
+            "loss 2.2772663 step 400\n",
+            "loss 2.2399716 step 500\n",
+            "loss 2.0661721 step 600\n",
+            "loss 2.0726125 step 700\n",
+            "loss 2.0671456 step 800\n",
+            "loss 1.9112525 step 900\n"
           ]
         }
       ]
