--- a/nanoGPT_jax3.ipynb
+++ b/nanoGPT_jax3.ipynb
@@ -17652,6 +17652,87 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Generating"
+      ],
+      "metadata": {
+        "id": "FWLBGB5VqQwi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T = config.block_size\n",
+        "\n",
+        "state = jax.tree_map(lambda x: x[0], states)\n",
+        "\n",
+        "state_apply_jit = jax.jit(state.apply_fn)\n",
+        "\n",
+        "context = jnp.tile(jnp.array([52], dtype=jnp.int32), T)\n",
+        "context = context[None, -T:]\n",
+        "key = jrand.PRNGKey(99)\n",
+        "\n",
+        "for _ in range(100):\n",
+        "  next_token_logits = state_apply_jit({\"params\": state.params}, context[:, -T:], False)\n",
+        "\n",
+        "  key, split_key = jrand.split(key)\n",
+        "  new_token = jax.random.categorical(key, next_token_logits[:, -1, :], axis=-1, shape=(1, 1))\n",
+        "\n",
+        "  context = jnp.concatenate([context, new_token], axis=1)\n",
+        "\n",
+        "\n",
+        "print(context.tolist()[0])"
+      ],
+      "metadata": {
+        "id": "JeZ-lGtoqSpc",
+        "outputId": "975b5150-605a-43b8-86ba-94c30edf9877",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 53, 61, 43, 31, 57, 1, 39, 58, 58, 0, 0, 21, 52, 27, 6, 1, 15, 53, 61, 5, 1, 58, 39, 39, 63, 1, 58, 61, 47, 58, 46, 53, 6, 1, 58, 47, 59, 57, 49, 1, 58, 46, 53, 52, 43, 6, 1, 49, 39, 50, 50, 1, 39, 47, 42, 14, 43, 57, 47, 43, 8, 0, 35, 53, 1, 24, 43, 58, 1, 53, 56, 1, 14, 59, 52, 58, 53, 1, 5, 58, 1, 52, 53, 1, 54, 39, 47, 52, 12, 0, 32, 46, 53, 59, 6, 1, 39, 52, 42, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "decode(context.tolist()[0], itos)"
+      ],
+      "metadata": {
+        "id": "desYLibHqoEi",
+        "outputId": "380d2e3b-d3cc-42a5-c1aa-bf876adc9083",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnoweSs att\\n\\nInO, Cow' taay twitho, tiusk thone, kall aidBesie.\\nWo Let or Bunto 't no pain?\\nThou, and \""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     }
   ]
 }
