--- a/nanoGPT_jax3.ipynb
+++ b/nanoGPT_jax3.ipynb
@@ -17628,27 +17628,27 @@
       ],
       "metadata": {
         "id": "Mdnn4TP8cPlX",
-        "outputId": "806a96b3-aa5f-4ff6-e02a-4a005b23fd13",
+        "outputId": "fb12f6c9-fc23-41c4-a396-944e6c7296a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "loss 2.694466 step 0\n",
-            "loss 2.5500324 step 100\n",
-            "loss 2.4421945 step 200\n",
-            "loss 2.356482 step 300\n",
-            "loss 2.2772663 step 400\n",
-            "loss 2.2399716 step 500\n",
-            "loss 2.0661721 step 600\n",
-            "loss 2.0726125 step 700\n",
-            "loss 2.0671456 step 800\n",
-            "loss 1.9112525 step 900\n"
+            "loss 1.9240838 step 0\n",
+            "loss 1.846526 step 100\n",
+            "loss 1.8195254 step 200\n",
+            "loss 1.8114189 step 300\n",
+            "loss 1.7836149 step 400\n",
+            "loss 1.7236618 step 500\n",
+            "loss 1.8629466 step 600\n",
+            "loss 1.6124247 step 700\n",
+            "loss 1.6071125 step 800\n",
+            "loss 1.7009875 step 900\n"
           ]
         }
       ]
@@ -17684,53 +17684,28 @@
         "  context = jnp.concatenate([context, new_token], axis=1)\n",
         "\n",
         "\n",
-        "print(context.tolist()[0])"
+        "print(decode(context.tolist()[0], itos))\n"
       ],
       "metadata": {
-        "id": "JeZ-lGtoqSpc",
-        "outputId": "975b5150-605a-43b8-86ba-94c30edf9877",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JeZ-lGtoqSpc",
+        "outputId": "de592647-3624-4e79-e2b3-7290ff85a144"
       },
-      "execution_count": 40,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 52, 53, 61, 43, 31, 57, 1, 39, 58, 58, 0, 0, 21, 52, 27, 6, 1, 15, 53, 61, 5, 1, 58, 39, 39, 63, 1, 58, 61, 47, 58, 46, 53, 6, 1, 58, 47, 59, 57, 49, 1, 58, 46, 53, 52, 43, 6, 1, 49, 39, 50, 50, 1, 39, 47, 42, 14, 43, 57, 47, 43, 8, 0, 35, 53, 1, 24, 43, 58, 1, 53, 56, 1, 14, 59, 52, 58, 53, 1, 5, 58, 1, 52, 53, 1, 54, 39, 47, 52, 12, 0, 32, 46, 53, 59, 6, 1, 39, 52, 42, 1]\n"
+            "nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnotk,s\n",
+            "Aver\n",
+            "InO, Commatta'd witts, tiurken how, know at,Butione.\n",
+            "\n",
+            "LADWIR:\n",
+            "For you re parnsom of lanto\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "decode(context.tolist()[0], itos)"
-      ],
-      "metadata": {
-        "id": "desYLibHqoEi",
-        "outputId": "380d2e3b-d3cc-42a5-c1aa-bf876adc9083",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnoweSs att\\n\\nInO, Cow' taay twitho, tiusk thone, kall aidBesie.\\nWo Let or Bunto 't no pain?\\nThou, and \""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 41
         }
       ]
     }
