Trained for 10,000 steps and output looks great!

--- a/nanoGPT_jax3.ipynb
+++ b/nanoGPT_jax3.ipynb
@@ -13905,67 +13905,67 @@
       ],
       "metadata": {
         "id": "Mdnn4TP8cPlX",
-        "outputId": "eab8797a-536e-4a80-b72d-8643014a2c82",
+        "outputId": "419490b1-249b-4526-b32b-ba24300c4b59",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "loss 4.1528625 step 0\n",
-            "loss 2.8024282 step 100\n",
-            "loss 2.5844538 step 200\n",
-            "loss 2.4919922 step 300\n",
-            "loss 2.425562 step 400\n",
-            "loss 2.2870266 step 500\n",
-            "loss 2.2153366 step 600\n",
-            "loss 2.160404 step 700\n",
-            "loss 2.0946534 step 800\n",
-            "loss 2.0349638 step 900\n",
-            "loss 2.0380728 step 1000\n",
-            "loss 1.9119394 step 1100\n",
-            "loss 1.8533238 step 1200\n",
-            "loss 1.8181921 step 1300\n",
-            "loss 1.7667024 step 1400\n",
-            "loss 1.8303425 step 1500\n",
-            "loss 1.7567366 step 1600\n",
-            "loss 1.7774209 step 1700\n",
-            "loss 1.7420139 step 1800\n",
-            "loss 1.678671 step 1900\n",
-            "loss 1.707147 step 2000\n",
-            "loss 1.8223367 step 2100\n",
-            "loss 1.6449612 step 2200\n",
-            "loss 1.6425562 step 2300\n",
-            "loss 1.6959611 step 2400\n",
-            "loss 1.5583923 step 2500\n",
-            "loss 1.5708483 step 2600\n",
-            "loss 1.4956452 step 2700\n",
-            "loss 1.6135253 step 2800\n",
-            "loss 1.5417315 step 2900\n",
-            "loss 1.6029048 step 3000\n",
-            "loss 1.4951543 step 3100\n",
-            "loss 1.5089898 step 3200\n",
-            "loss 1.4972267 step 3300\n",
-            "loss 1.4751146 step 3400\n",
-            "loss 1.363421 step 3500\n",
-            "loss 1.502469 step 3600\n",
-            "loss 1.5141551 step 3700\n",
-            "loss 1.4729427 step 3800\n",
-            "loss 1.5326108 step 3900\n",
-            "loss 1.5770879 step 4000\n",
-            "loss 1.3775605 step 4100\n",
-            "loss 1.4529471 step 4200\n",
-            "loss 1.5283947 step 4300\n",
-            "loss 1.513656 step 4400\n",
-            "loss 1.3823911 step 4500\n",
-            "loss 1.31335 step 4600\n",
-            "loss 1.4549755 step 4700\n",
-            "loss 1.457424 step 4800\n",
-            "loss 1.3039824 step 4900\n"
+            "loss 1.4132832 step 0\n",
+            "loss 1.3283741 step 100\n",
+            "loss 1.4683454 step 200\n",
+            "loss 1.2704858 step 300\n",
+            "loss 1.3788984 step 400\n",
+            "loss 1.4155483 step 500\n",
+            "loss 1.376879 step 600\n",
+            "loss 1.4007272 step 700\n",
+            "loss 1.426699 step 800\n",
+            "loss 1.5118258 step 900\n",
+            "loss 1.34021 step 1000\n",
+            "loss 1.3452451 step 1100\n",
+            "loss 1.4081894 step 1200\n",
+            "loss 1.3450747 step 1300\n",
+            "loss 1.3111693 step 1400\n",
+            "loss 1.2367384 step 1500\n",
+            "loss 1.3846908 step 1600\n",
+            "loss 1.2269393 step 1700\n",
+            "loss 1.3435273 step 1800\n",
+            "loss 1.256681 step 1900\n",
+            "loss 1.2345691 step 2000\n",
+            "loss 1.3718178 step 2100\n",
+            "loss 1.307669 step 2200\n",
+            "loss 1.2188697 step 2300\n",
+            "loss 1.3362455 step 2400\n",
+            "loss 1.3168052 step 2500\n",
+            "loss 1.2972779 step 2600\n",
+            "loss 1.2903043 step 2700\n",
+            "loss 1.3317862 step 2800\n",
+            "loss 1.2902042 step 2900\n",
+            "loss 1.2277825 step 3000\n",
+            "loss 1.2293336 step 3100\n",
+            "loss 1.3329002 step 3200\n",
+            "loss 1.2261844 step 3300\n",
+            "loss 1.2617517 step 3400\n",
+            "loss 1.2763953 step 3500\n",
+            "loss 1.2462932 step 3600\n",
+            "loss 1.2730976 step 3700\n",
+            "loss 1.3000119 step 3800\n",
+            "loss 1.1708626 step 3900\n",
+            "loss 1.1839855 step 4000\n",
+            "loss 1.2777848 step 4100\n",
+            "loss 1.150012 step 4200\n",
+            "loss 1.2795997 step 4300\n",
+            "loss 1.2742264 step 4400\n",
+            "loss 1.189019 step 4500\n",
+            "loss 1.132446 step 4600\n",
+            "loss 1.2176671 step 4700\n",
+            "loss 1.1426802 step 4800\n",
+            "loss 1.1916157 step 4900\n"
           ]
         }
       ]
@@ -13992,7 +13992,7 @@
         "context = context[None, -T:]\n",
         "key = jrand.PRNGKey(999)\n",
         "\n",
-        "for _ in range(100):\n",
+        "for _ in range(1000):\n",
         "  next_token_logits = state_apply_jit({\"params\": state.params}, context[:, -T:], False)\n",
         "\n",
         "  key, split_key = jrand.split(key)\n",
@@ -14005,15 +14005,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "64173e8e-f137-45f4-98d2-ef2aca43b961"
+        "outputId": "9c4c5b7b-ded8-4601-95bd-99f92a567c57"
       },
-      "execution_count": 56,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-56-3363b475c6da>:3: DeprecationWarning: jax.tree_map is deprecated: use jax.tree.map (jax v0.4.25 or newer) or jax.tree_util.tree_map (any JAX version).\n",
+            "<ipython-input-59-8df52eefa692>:3: DeprecationWarning: jax.tree_map is deprecated: use jax.tree.map (jax v0.4.25 or newer) or jax.tree_util.tree_map (any JAX version).\n",
             "  state = jax.tree_map(lambda x: x[0], states)\n"
           ]
         }
@@ -14025,23 +14025,50 @@
         "print(decode(context.tolist()[0], itos))\n"
       ],
       "metadata": {
-        "id": "RtZTWcOjfuPk",
-        "outputId": "6916dd1b-7179-407d-fb5e-892ef4fe8025",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RtZTWcOjfuPk",
+        "outputId": "40bd5ecc-34a2-4048-f7d7-9293a5373074"
       },
-      "execution_count": 57,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnne'lte?\n",
+            "nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnng' teace:\n",
+            "An giant embous it cries buried,\n",
+            "And send for two lie tendeon,\n",
+            "My liege, that away the selfsaols of ourselves:\n",
+            "How deliver'd hell circhs she resolute and secord,\n",
+            "Until Capitol, credent him, all my trades o'erish;\n",
+            "And seemem to--Nay meaning!' I can here\n",
+            "The cruel can from my name; can coups my love.\n",
             "\n",
-            "Thirglion:\n",
-            "I't speak of their stir we seeming.\n",
-            "The servated born, gifity, covere we no best:\n"
+            "CLAUDIO:\n",
+            "I had forget shall do me a great apace,\n",
+            "So brought be sap forget the worst defendIed:\n",
+            "Well I leave thee, madam:--\n",
+            "A mother, well met you have full as I said;\n",
+            "But need no more charged shelves be burn them:\n",
+            "I heard thee by better by an all Christen\n",
+            "And stabs: 'tis will pray you, ho!\n",
+            "Kile thou open him, help freedom, let her and\n",
+            "bound: my lord.\n",
+            "\n",
+            "POLIXENES:\n",
+            "Take it is:\n",
+            "We dreadful foolish banish'd Borhemove:\n",
+            "The nose is their by actor:\n",
+            "The rest at shadows for gentlemen, with\n",
+            "Thou shalt advanced flood or burnts,\n",
+            "That thousand to jelects and well arquit;\n",
+            "Years may shelves.\n",
+            "\n",
+            "GLOUCESTER:\n",
+            "Your daughter, and the desires cause thou hadst that make ripe\n",
+            "From what we loss remedies bor\n"
           ]
         }
       ]
