--- a/nanoGPT_jax3.ipynb
+++ b/nanoGPT_jax3.ipynb
@@ -29,7 +29,7 @@
         "id": "9gG2Ds42c15P",
         "outputId": "80f66d10-b296-4ad6-b413-3a9dc35f0fca"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "72Nj51EWBerM"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +184,7 @@
       "metadata": {
         "id": "fnlWQ63kW0kd"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
         "id": "26cmngjtGo3T",
         "outputId": "b64f2aab-c4e9-47c5-9ef9-7a00bb405f25"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "_zc03nHjczus"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +333,7 @@
       "metadata": {
         "id": "AyAh-Yj9dQrD"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +364,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -560,13 +560,15 @@
         "    self.ln = nn.LayerNorm()\n",
         "    self.lang_model_head = nn.Dense(features=self.C)\n",
         "\n",
-        "  def __call__(self, block_of_tokens: jnp.array, training: bool):\n",
+        "  def __call__(self, tokens: jnp.array, training: bool):\n",
         "    \"\"\"Accepts a block of tokens, like [0, 1, 2, 3, 4, 5, 6, 7].\"\"\"\n",
+        "    # tokens: (T, C)\n",
+        "\n",
         "    # generate emb for each token. output: (num_tokens, n_embed)\n",
-        "    token_embs = self.token_embedding_table(block_of_tokens)\n",
+        "    token_embs = self.token_embedding_table(tokens)\n",
         "\n",
         "    # generate position embs for each token.\n",
-        "    num_pos = block_of_tokens.shape[0]\n",
+        "    num_pos = tokens.shape[0]\n",
         "    positions = jnp.arange(0, num_pos)\n",
         "    pos_embs = self.pos_embedding_table(positions)\n",
         "\n",
@@ -574,13 +576,13 @@
         "    x = token_embs + pos_embs\n",
         "\n",
         "    # feed x into self-attention head.\n",
-        "    # language model, forward pass, block_of_tokens\n",
+        "    # language model, forward pass, tokens\n",
         "    for i in range(self.num_layers):\n",
         "      x = self.blocks[i](x, training)\n",
         "\n",
         "    x = self.ln(x)\n",
         "\n",
-        "    # generate logits for each token. output: (T, channels for info -- C)\n",
+        "    # generate logits for each token. output: (T, C)\n",
         "    token_logits = self.lang_model_head(x)\n",
         "\n",
         "    return token_logits\n",
@@ -596,6 +598,7 @@
         "\n",
         "  @nn.compact\n",
         "  def __call__(self, tokens: jnp.array, training: bool):\n",
+        "    # tokens: (B, T, C)\n",
         "    return jax.vmap(LanguageModel(\n",
         "        vocab_size=self.vocab_size,\n",
         "        n_embed=self.n_embed,\n",
@@ -608,7 +611,7 @@
       "metadata": {
         "id": "T-EplD3kJspx"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -617,6 +620,10 @@
         "def forward_pass(params, state, batch, training, rng):\n",
         "  inputs, targets = batch\n",
         "  logits = state.apply_fn({\"params\": params}, inputs, training, rngs={\"dropout\": rng})\n",
+        "\n",
+        "  # logits: T, C\n",
+        "  # targets: T\n",
+        "  # logits predict each position\n",
         "  loss = optax.softmax_cross_entropy_with_integer_labels(logits, targets)\n",
         "  loss = loss.mean()\n",
         "  return loss"
@@ -624,7 +631,7 @@
       "metadata": {
         "id": "aq7qKwvaMMJR"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -640,7 +647,7 @@
       "metadata": {
         "id": "18htMbRiNLSh"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -659,7 +666,7 @@
       "metadata": {
         "id": "ED5UYEv8RklP"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -675,7 +682,7 @@
       "metadata": {
         "id": "qDqK-I-rNCHp"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +697,7 @@
       "metadata": {
         "id": "La2WfX9LUKpO"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -705,7 +712,7 @@
       "metadata": {
         "id": "J8yhi01bUR5z"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -721,7 +728,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +755,7 @@
         "id": "hJzqX4JzUZSz",
         "outputId": "0c2a7fe8-8581-4c47-e49b-c9dfe5e9783c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +807,7 @@
       "metadata": {
         "id": "MVloxbBKMQkV"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -811,7 +818,7 @@
       "metadata": {
         "id": "DvjPw2u7TOp_"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -826,7 +833,7 @@
         },
         "outputId": "9cecf722-814c-472b-b657-8567fd21f97b"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13889,7 +13896,7 @@
       "metadata": {
         "id": "oyNTZdwGUzkb"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13910,7 +13917,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14007,7 +14014,7 @@
         },
         "outputId": "9c4c5b7b-ded8-4601-95bd-99f92a567c57"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14031,7 +14038,7 @@
         "id": "RtZTWcOjfuPk",
         "outputId": "40bd5ecc-34a2-4048-f7d7-9293a5373074"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
